syntax="proto3";

message DiscoveryMessage{

    enum MessageType{
        DISCOVERY = 0;
        CONNECT = 1;
    }

    MessageType message_type = 1;
    bytes node_id = 2;
}